# l-and-p-freight

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BROKERAGE_CHECKLIST.md  CODEBASE_REVIEW.md  DESIGN_REVIEW.md  Dockerfile  L&P_FREIGHT_SETUP.md  README.md  ROADMAP.md  app.py  docker-compose.yml  lawsons asks for the platforrm.txt  mobile_app.py  portal.py  requirements.txt  routing_editor.py  run-driver.ps1  run-fleet.ps1  run-website.ps1  run.ps1  run_lawson.ps1  start-all.ps1  test_app.py  vercel.json
.streamlit/: config.production.toml  config.toml  secrets.toml.example
L&P_Freight/: lawsons asks for the platforrm.txt
audit-reports/: FULL-STACK-AUDIT-2026-07-12.md  PHASE1-CURRENT-STATE-REPORT-2026-07-12.md  PRODUCTION-HARDENING-SPRINT-2026-07-15.md  SPRINT2-VISUAL-POLISH-2026-07-12.md  SPRINT3-PRODUCTION-FINISH-2026-07-12.md
deploy/: nginx-bootstrap.conf  nginx.conf  setup-ssl.ps1  setup-tunnel.ps1
lawson-freight-platform/: .env.example  .gitignore  CODEBASE_REVIEW.md  L&P_FREIGHT_SETUP.md  ROADMAP.md  app.py  deploy.ps1  eld_api_stubs.py  eld_integration.py  portal.py  pyproject.toml  run-driver.ps1  run-website.ps1  run.bat  run.ps1  run_lawson.ps1  start.bat  start.ps1
lawson-freight-platform/.streamlit/: config.production.toml  secrets.toml.example
lawson-freight-platform/deploy/: nginx-bootstrap.conf  production.ps1  run-native-production.ps1  setup-dns.ps1  start-https-tunnel.ps1  verify-production.ps1
lawson-freight-platform/eld_mobile/: index.html
lawson-freight-platform/lp_helpers/: analytics_dashboard.py  bol_export.py  database.py  driver_mobile.py  emergency_alerts.py  engines.py  lawson_profile.py  load_board.py  mobile_web.py  pages.py  traccar_live.py  ui_components.py  ui_theme.py
lawson-freight-platform/tests/: test_platform_debug.py  test_routing.py
lawson-freight-platform/web/: index.html  manifest-driver.json
(+62 files in other folders)
